--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,8 @@ html, body {
 }
 
 body {
-    background: url(../images/background.jpg);
+    background: url(../images/background.jpg) no-repeat;
+    background-size: cover;
 }
 
 div#main {
@@ -28,4 +29,12 @@ div#phone {
     height: 627px;
     width: 311px;
     background: url(../images/frame-iphone.png) no-repeat;
+}
+
+iframe#phone {
+    position: relative;
+    top: 81px;
+    left: 23px;
+    width: 265px;
+    height: 470px;
 }
